Java21 - replace new Interger with Integer.valueOf, similar for Long, Double.  new Integer is deprecated